<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/status_bg"
        android:layout_width="match_parent"
        android:layout_height="0.01dp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.helper.widget.Layer
        android:id="@+id/toolbar_layer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:constraint_referenced_ids="back,et_search_view,tv_cancel"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_icon"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintTop_toTopOf="@+id/tv_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/tv_cancel"/>

    <com.luuu.seven.widgets.ClearEditText
        android:id="@+id/et_search_view"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:background="@drawable/search_bg"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical"
        android:hint="@string/comic_search"
        android:imeOptions="actionSearch"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:singleLine="true"
        android:textSize="12sp"
        app:layout_constraintTop_toTopOf="@+id/tv_cancel"
        app:layout_constraintEnd_toStartOf="@+id/tv_cancel"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintBottom_toBottomOf="@+id/tv_cancel"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status_bg"
        android:text="@string/cancel" />



<!--    <com.google.android.material.appbar.MaterialToolbar-->
<!--        android:id="@+id/common_toolbar"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="?attr/actionBarSize"-->
<!--        android:background="@color/colorPrimary"-->
<!--        app:layout_constraintTop_toTopOf="parent">-->

<!--        <RelativeLayout-->
<!--            android:id="@+id/frame_bg"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:paddingLeft="15dp"-->
<!--            android:paddingRight="15dp">-->

<!--            -->

<!--            -->
<!--        </RelativeLayout>-->
<!--    </com.google.android.material.appbar.MaterialToolbar>-->

    <TextView
        android:id="@+id/tv_hot_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/hot_search"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_cancel" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        app:layout_goneMarginTop="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_hot_search" />


</androidx.constraintlayout.widget.ConstraintLayout>
